# pics-server

./: .gitignore  Dockerfile  LICENSE  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 1d3220c9d7df_init.py
kubernetes/: api-deployment.yml  db-deployment.yml  db-pv.yml
src/: __main__.py  config.py  containers.py  database.py  exceptions.py  gunicorn.conf.py  main.py
src/api/: dependencies.py  router.py
src/api/endpoints/: auth.py  images.py  users.py
src/auth/: models.py  schemas.py  service.py
src/db/: dependency.py  exceptions.py  service.py  session.py
src/images/: constants.py  exceptions.py  filters.py  models.py  schemas.py  service.py  storage.py  utils.py
src/users/: exceptions.py  models.py  service.py
tests/: conftest.py
tests/test_images/: test_service.py  test_storage.py
tests/test_users/: test_models.py  test_service.py
