[tool.isort]
profile = "black"

[tool.poetry]
name = "pics-server"
version = "0.1.0"
description = ""
authors = ["SweetBubaleXXX <70811772+SweetBubaleXXX@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
pydantic-settings = "^2.1.0"
dependency-injector = "^4.41.0"
sqlmodel = "^0.0.14"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
